@startuml Soccer Field Booking System - Class Diagram
' Sơ đồ Lớp Hệ thống Đặt sân bóng đá (Phản ánh đúng kiến trúc Backend hiện tại)

title Hệ thống Đặt sân bóng đá - Sơ đồ Lớp (Backend Model)

skinparam classAttributeIconSize 0
skinparam linetype ortho

' --- TÀI KHOẢN VÀ NGƯỜI DÙNG ---

class Role {
  + id: number
  + name: RoleEnum
}

class Account {
  + id: string
  + email: string
  + password: string
  + is_active: boolean
  + provider: string
  + createdAt: Date
}

class UserProfile {
  + id: string
  + full_name: string
  + date_of_birth: Date
  + gender: GenderEnum
  + phone_number: string
  + avatar_url: string
  + bio: string
  + is_profile_complete: boolean
}

' --- CHI NHÁNH VÀ SÂN BÓNG ---

class Branch {
  + id: string
  + name: string
  + code: string
  + phone_number: string
  + status: BranchStatus
  + operating_start_time: Time
  + operating_end_time: Time
}

class FieldType {
  + id: number
  + name: string
}

class Field {
  + id: string
  + name: string
  + status: FieldStatus
}

class TimeSlot {
  + id: string
  + startTime: Time
  + endTime: Time
}

class Price {
  + id: string
  + dayOfWeek: DayOfWeek
  + price: number
}

' --- ĐẶT SÂN VÀ THANH TOÁN ---

class Booking {
  + id: string
  + startTime: Date
  + endTime: Date
  + totalPrice: number
  + status: BookingStatus
  + createdAt: Date
}

class Payment {
  + id: string
  + amount: number
  + status: PaymentStatus
  + paymentMethod: string
  + transactionCode: string
  + createdAt: Date
  + completedAt: Date
}

class Voucher {
  + id: string
  + code: string
  + discountAmount: number
  + discountType: DiscountType
  + quantity: number
  + expiresAt: Date
  + isActive: boolean
}

class VoucherUsage {
  + id: string
  + usedAt: Date
}

' --- ĐÁNH GIÁ VÀ HỖ TRỢ ---

class Review {
  + id: string
  + rating: number
  + comment: string
  + createdAt: Date
}

class Feedback {
  + id: string
  + title: string
  + category: string
  + status: FeedbackStatus
  + created_at: Date
}

class FeedbackResponse {
  + id: string
  + content: string
  + created_at: Date
}

' --- QUAN HỆ ---

' Users
Role "1" <-- "0..*" Account : has
Account "1" -- "1" UserProfile : belongs to

' Fields
Branch "1" *-- "0..*" Field : manages
UserProfile "1" <-- "0..*" Branch : managed by (BranchManager)
FieldType "1" <-- "0..*" Field : belongs to
Field "1" *-- "0..*" Price : has pricing
TimeSlot "1" <-- "0..*" Price : applies for

' Bookings & Payments
UserProfile "1" <-- "0..*" Booking : books
Field "1" <-- "0..*" Booking : booked for
Booking "1" *-- "1" Payment : requires
Booking "1" -- "0..1" VoucherUsage : uses

' Vouchers
Voucher "1" *-- "0..*" VoucherUsage : tracked by
UserProfile "1" <-- "0..*" VoucherUsage : used by

' Reviews
UserProfile "1" <-- "0..*" Review : writes
Field "1" <-- "0..*" Review : receives

' Feedbacks
UserProfile "1" <-- "0..*" Feedback : submits
UserProfile "0..1" <-- "0..*" Feedback : assigned to
Feedback "1" *-- "0..*" FeedbackResponse : contains
UserProfile "1" <-- "0..*" FeedbackResponse : responded by

@enduml